// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BTCAmount should render correctly for large size 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "height": 18,
        "width": 196,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexShrink": 0,
        },
        {
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
      ]
    }
  >
    <test-file-stub
      fill="#888"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        {
          "gap": 5,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "opacity": 0.1,
                "textAlign": "right",
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                },
                false,
              ],
            ],
            false,
          ]
        }
      >
        0.00 0
      </Text>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "textAlign": "right",
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                },
                false,
              ],
            ],
            false,
          ]
        }
      >
        21 000
      </Text>
    </View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 20,
              "letterSpacing": 0.2,
            },
            false,
          ],
          false,
        ]
      }
    >
      sats
    </Text>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for medium size 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,12 +6,12 @@
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
-         "height": 18,
-         "width": 196,
+         "height": 13,
+         "width": 152,
        },
      ]
    }
  >
    <View
@@ -19,25 +19,25 @@
        Array [
          Object {
            "flexShrink": 0,
          },
          Object {
-           "paddingBottom": 4,
-           "paddingLeft": 4,
-           "paddingRight": 4,
-           "paddingTop": 4,
+           "paddingBottom": 2.5,
+           "paddingLeft": 2.5,
+           "paddingRight": 2.5,
+           "paddingTop": 2.5,
          },
        ]
      }
    >
      <test-file-stub
        fill="#888"
        style={
          Array [
            Object {
-             "height": 24,
-             "width": 24,
+             "height": 15,
+             "width": 15,
            },
            undefined,
          ]
        }
      />
@@ -87,12 +87,15 @@
                  "textAlign": "right",
                },
                Array [
                  Object {
                    "fontFamily": "Baloo2-SemiBold",
-                   "fontSize": 20,
-                   "letterSpacing": 0.2,
+                   "fontSize": 16,
+                   "letterSpacing": 0.16,
+                   "lineHeight": 28,
+                   "marginBottom": -13,
+                   "marginTop": -13,
                  },
                  false,
                ],
              ],
              false,
@@ -117,12 +120,15 @@
                  "textAlign": "right",
                },
                Array [
                  Object {
                    "fontFamily": "Baloo2-SemiBold",
-                   "fontSize": 20,
-                   "letterSpacing": 0.2,
+                   "fontSize": 16,
+                   "letterSpacing": 0.16,
+                   "lineHeight": 28,
+                   "marginBottom": -13,
+                   "marginTop": -13,
                  },
                  false,
                ],
              ],
              false,
@@ -144,12 +150,15 @@
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "Baloo2-SemiBold",
-               "fontSize": 20,
-               "letterSpacing": 0.2,
+               "fontSize": 16,
+               "letterSpacing": 0.16,
+               "lineHeight": 28,
+               "marginBottom": -13,
+               "marginTop": -13,
              },
              false,
            ],
            false,
          ]"
`;

exports[`BTCAmount should render correctly for small size 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,12 +6,12 @@
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
-         "height": 18,
-         "width": 196,
+         "height": 10,
+         "width": 130,
        },
      ]
    }
  >
    <View
@@ -19,25 +19,25 @@
        Array [
          Object {
            "flexShrink": 0,
          },
          Object {
-           "paddingBottom": 4,
-           "paddingLeft": 4,
-           "paddingRight": 4,
-           "paddingTop": 4,
+           "paddingBottom": 2,
+           "paddingLeft": 2,
+           "paddingRight": 2,
+           "paddingTop": 2,
          },
        ]
      }
    >
      <test-file-stub
        fill="#888"
        style={
          Array [
            Object {
-             "height": 24,
-             "width": 24,
+             "height": 12,
+             "width": 12,
            },
            undefined,
          ]
        }
      />
@@ -51,11 +51,11 @@
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
-           "gap": 5,
+           "gap": 2,
          },
        ]
      }
    >
      <View
@@ -87,12 +87,15 @@
                  "textAlign": "right",
                },
                Array [
                  Object {
                    "fontFamily": "Baloo2-SemiBold",
-                   "fontSize": 20,
-                   "letterSpacing": 0.2,
+                   "fontSize": 14,
+                   "letterSpacing": 0.14,
+                   "lineHeight": 22,
+                   "marginBottom": -10,
+                   "marginTop": -10,
                  },
                  false,
                ],
              ],
              false,
@@ -117,12 +120,15 @@
                  "textAlign": "right",
                },
                Array [
                  Object {
                    "fontFamily": "Baloo2-SemiBold",
-                   "fontSize": 20,
-                   "letterSpacing": 0.2,
+                   "fontSize": 14,
+                   "letterSpacing": 0.14,
+                   "lineHeight": 22,
+                   "marginBottom": -10,
+                   "marginTop": -10,
                  },
                  false,
                ],
              ],
              false,
@@ -144,12 +150,15 @@
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "Baloo2-SemiBold",
-               "fontSize": 20,
-               "letterSpacing": 0.2,
+               "fontSize": 14,
+               "letterSpacing": 0.14,
+               "lineHeight": 22,
+               "marginBottom": -10,
+               "marginTop": -10,
              },
              false,
            ],
            false,
          ]"
`;

exports[`BTCAmount should render correctly when showAmount is false 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -64,75 +64,123 @@
            "alignItems": "center",
            "flexBasis": "0%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
-           "justifyContent": "flex-end",
+           "justifyContent": "space-between",
+           "paddingLeft": 1,
          }
        }
      >
-       <Text
-         allowFontScaling={false}
+       <test-file-stub
+         fill="#888"
          style={
            Array [
              Object {
-               "color": "#2B1911",
-               "fontFamily": "Baloo2-Regular",
-               "fontSize": 16,
-               "letterSpacing": 0.16,
-               "lineHeight": 24,
+               "height": 8,
+               "width": 8,
              },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
            Array [
              Object {
-                 "opacity": 0.1,
-                 "textAlign": "right",
+               "height": 8,
+               "width": 8,
              },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
            Array [
              Object {
-                   "fontFamily": "Baloo2-SemiBold",
-                   "fontSize": 20,
-                   "letterSpacing": 0.2,
+               "height": 8,
+               "width": 8,
              },
-                 false,
-               ],
-             ],
-             false,
+             undefined,
            ]
          }
-       >
-         0.00 0
-       </Text>
-       <Text
-         allowFontScaling={false}
+       />
+       <test-file-stub
+         fill="#888"
          style={
            Array [
              Object {
-               "color": "#2B1911",
-               "fontFamily": "Baloo2-Regular",
-               "fontSize": 16,
-               "letterSpacing": 0.16,
-               "lineHeight": 24,
+               "height": 8,
+               "width": 8,
+             },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
+           Array [
+             Object {
+               "height": 8,
+               "width": 8,
+             },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
+           Array [
+             Object {
+               "height": 8,
+               "width": 8,
              },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
            Array [
              Object {
-                 "textAlign": "right",
+               "height": 8,
+               "width": 8,
+             },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
+           Array [
+             Object {
+               "height": 8,
+               "width": 8,
              },
+             undefined,
+           ]
+         }
+       />
+       <test-file-stub
+         fill="#888"
+         style={
            Array [
              Object {
-                   "fontFamily": "Baloo2-SemiBold",
-                   "fontSize": 20,
-                   "letterSpacing": 0.2,
+               "height": 8,
+               "width": 8,
              },
-                 false,
-               ],
-             ],
-             false,
+             undefined,
            ]
          }
-       >
-         21 000
-       </Text>
+       />
      </View>
      <Text
        allowFontScaling={false}
        style={
          Array ["
`;

exports[`BTCAmount should render correctly when the amount has 6 digits 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "height": 18,
        "width": 196,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexShrink": 0,
        },
        {
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
      ]
    }
  >
    <test-file-stub
      fill="#888"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        {
          "gap": 5,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "opacity": 0.1,
                "textAlign": "right",
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                },
                false,
              ],
            ],
            false,
          ]
        }
      >
        0.00
      </Text>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "textAlign": "right",
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                },
                false,
              ],
            ],
            false,
          ]
        }
      >
         123 456
      </Text>
    </View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 20,
              "letterSpacing": 0.2,
            },
            false,
          ],
          false,
        ]
      }
    >
      sats
    </Text>
  </View>
</View>
`;

exports[`BTCAmount should render correctly when the value is 0 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      {
        "height": 18,
        "width": 196,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexShrink": 0,
        },
        {
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
      ]
    }
  >
    <test-file-stub
      fill="#888"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        {
          "gap": 5,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "opacity": 0.1,
                "textAlign": "right",
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                },
                false,
              ],
            ],
            false,
          ]
        }
      >
        0.00 000 00
      </Text>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "textAlign": "right",
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                },
                false,
              ],
            ],
            false,
          ]
        }
      >
        0
      </Text>
    </View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 20,
              "letterSpacing": 0.2,
            },
            false,
          ],
          false,
        ]
      }
    >
      sats
    </Text>
  </View>
</View>
`;

exports[`BTCAmount should render correctly with white 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -90,11 +90,13 @@
                  Object {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                  },
-                 false,
+                 Object {
+                   "color": "#BAADA7",
+                 },
                ],
              ],
              false,
            ]
          }
@@ -120,11 +122,13 @@
                  Object {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                  },
-                 false,
+                 Object {
+                   "color": "#BAADA7",
+                 },
                ],
              ],
              false,
            ]
          }
@@ -147,11 +151,13 @@
              Object {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 20,
                "letterSpacing": 0.2,
              },
-             false,
+             Object {
+               "color": "#BAADA7",
+             },
            ],
            false,
          ]
        }
      >"
`;
